--- a/app/src/main/res/layout/activity_snsprofile.xml
+++ b/app/src/main/res/layout/activity_snsprofile.xml
@@ -91,46 +91,67 @@
                 android:text="0"/>
         </LinearLayout>
     </LinearLayout>
-    <TextView
-        android:id="@+id/sns_profile_update"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:text="프로필 수정"
-        android:layout_gravity="center"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:background="@drawable/border_profile_update"/>
-    <TextView
-        android:id="@+id/sns_profile_follow"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:text="팔로우 하기"
-        android:layout_gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:background="@drawable/border_profile_update"/>
-    <TextView
-        android:id="@+id/sns_profile_eachfollow"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:text="맞팔로우 하기"
-        android:layout_gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:background="@drawable/border_profile_update"/>
-    <TextView
-        android:id="@+id/sns_profile_following"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:text="팔로우 중"
-        android:layout_gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:background="@drawable/border_profile_update"/>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_weight="85"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/sns_profile_update"
+                android:layout_margin="10dp"
+                android:gravity="center"
+                android:textAlignment="center"
+                android:text="프로필 수정"
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:background="@drawable/border_profile_update"/>
+            <TextView
+                android:id="@+id/sns_profile_follow"
+                android:layout_margin="10dp"
+                android:gravity="center"
+                android:textAlignment="center"
+                android:text="팔로우 하기"
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:background="@drawable/border_profile_update"/>
+            <TextView
+                android:id="@+id/sns_profile_eachfollow"
+                android:layout_margin="10dp"
+                android:gravity="center"
+                android:textAlignment="center"
+                android:text="맞팔로우 하기"
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:background="@drawable/border_profile_update"/>
+            <TextView
+                android:id="@+id/sns_profile_following"
+                android:layout_margin="10dp"
+                android:gravity="center"
+                android:textAlignment="center"
+                android:text="팔로우 중"
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:background="@drawable/border_profile_update"/>
+        </LinearLayout>
+        <ImageView
+            android:layout_weight="15"
+            android:id="@+id/sns_profile_message"
+            android:layout_gravity="center"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:src="@drawable/message"
+            />
+    </LinearLayout>
+
+
     <View
         android:layout_width="wrap_content"
         android:layout_height="0.3dp"
