--- a/app/src/main/res/layout/activity_snscontents.xml
+++ b/app/src/main/res/layout/activity_snscontents.xml
@@ -76,8 +76,9 @@
             android:id="@+id/sns_reply"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/talk"/>
+            android:src="@drawable/talk2"/>
         <ImageView
+            android:visibility="gone"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/border_main"/>
