--- a/app/src/main/res/layout/activity_user_item.xml
+++ b/app/src/main/res/layout/activity_user_item.xml
@@ -7,13 +7,14 @@
     android:layout_height="150dp"
     android:padding="15dp"
     android:layout_margin="5dp"
-    android:background="@drawable/border_main">
+    android:background="@drawable/border_main"
+    tools:context=".Activity.MoreViewContents">
     <LinearLayout
-        android:id="@+id/frame"
+        android:id="@+id/historyFrame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
-            android:id="@+id/profile_image"
+            android:id="@+id/historyImage"
             android:layout_width="150dp"
             android:layout_height="150dp"
             app:srcCompat = "@mipmap/ic_launcher"/>
@@ -23,15 +24,21 @@
             android:layout_height="match_parent">
             <TextView
                 android:maxLines="3"
-                android:gravity="center"
                 android:ellipsize="end"
                 android:padding="15dp"
-                android:textSize="20dp"
-                android:id="@+id/nickname"
+                android:id="@+id/historySubject"
                 android:textStyle="bold"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="닉네임"/>
+                android:layout_height="wrap_content"
+                android:text="제목"/>
+            <TextView
+                android:layout_marginTop="20dp"
+                android:padding="15dp"
+                android:id="@+id/historyViews"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="조회수"/>
 
         </LinearLayout>
     </LinearLayout>
