2020/04/03 RTMP 클라이언트 구현 + 코틀린 도입 두 번째 커밋

--- a/app/src/main/res/menu/activity_main_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer_drawer.xml
@@ -5,7 +5,7 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/go_BraodCast"
+            android:id="@+id/go_VideoCurrency"
             android:icon="@drawable/ic_menu_camera"
             android:title="영상통화하기" />
         <item
